<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_the_dog"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_00_pm_today"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="330dp"
        android:layout_height="189dp"
        android:text="@string/walk_my_little_dog_bowen_at_xinfu_park"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/event_time"
        app:layout_constraintStart_toStartOf="@id/event_title"
        app:layout_constraintEnd_toEndOf="@id/event_title"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>