<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="congratsFragment"
            type="com.example.weedplanter.CongratsFragment"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CongratsFragment">

    <TextView
        android:id="@+id/congrats_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/congratulations"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/you_get_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congrats_msg"
        android:layout_marginTop="0dp"
        android:text="@string/you_get"
        android:textSize="40sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/fruit_you_get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/you_get_msg"
        app:srcCompat="@drawable/lemon"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/garden_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_garden"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:onClick='@{() -> congratsFragment.myGarden()}'/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>